Add LDAP support.

--- a/config/settings.json
+++ b/config/settings.json
@@ -18,9 +18,9 @@
     "elasticsearch_dep_index": "dependency",
     "elasticsearch_product_index": "product",
     "elasticsearch_user_index": "user",
-    "elasticsearch_addr": "172.16.172.128",
+    "elasticsearch_addr": "172.16.148.134",
     "elasticsearch_port": "9200",
-    "rabbitmq_addr": "172.16.172.128",
+    "rabbitmq_addr": "172.16.148.134",
     "rabbitmq_port": "5672",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
@@ -33,7 +33,7 @@
     "projects_unique_scm": false,
     "memcache_password": null,
     "memcache_username": null,
-    "memcache_addr": "172.16.172.128",
+    "memcache_addr": "172.16.148.134",
     "memcache_port": "11211",
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
@@ -63,9 +63,16 @@
     "default_project_period": "daily",
     "default_project_public": true,
     "show_signup_form": true,
-    "show_login_form": true, 
-    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb", 
-    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html"
+    "show_login_form": true,
+    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
+    "ldap_host": "172.16.148.135",
+    "ldap_port": "389",
+    "ldap_base": "dc=versioneye, dc=com",
+    "ldap_filter": "(cn=LOGIN)",
+    "ldap_email": "mail",
+    "ldap_username": "uid",
+    "ldap_active": "false"
   },
   "test": {
     "ga_account": "",
@@ -87,9 +94,9 @@
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "product_test",
     "elasticsearch_user_index": "user_test",
-    "elasticsearch_addr": "172.16.172.128",
+    "elasticsearch_addr": "172.16.148.134",
     "elasticsearch_port": "9200",
-    "rabbitmq_addr": "172.16.172.128",
+    "rabbitmq_addr": "172.16.148.134",
     "rabbitmq_port": "5672",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
@@ -102,7 +109,7 @@
     "projects_unique_scm": false,
     "memcache_password": null,
     "memcache_username": null,
-    "memcache_addr": "172.16.172.128",
+    "memcache_addr": "172.16.148.134",
     "memcache_port": "11211",
     "s3_infographics_bucket": "veye_test_infographics",
     "s3_projects_bucket": "veye_test_projects",
@@ -132,9 +139,16 @@
     "default_project_period": "daily",
     "default_project_public": true,
     "show_signup_form": true,
-    "show_login_form": true, 
-    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb", 
-    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html"
+    "show_login_form": true,
+    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
+    "ldap_host": "172.16.148.135",
+    "ldap_port": "389",
+    "ldap_base": "dc=versioneye, dc=com",
+    "ldap_filter": "(cn=LOGIN)",
+    "ldap_email": "mail",
+    "ldap_username": "uid",
+    "ldap_active": "false"
   },
   "production": {
     "ga_account": "UA-32702672-1",
@@ -199,9 +213,16 @@
     "default_project_period": "daily",
     "default_project_public": true,
     "show_signup_form": true,
-    "show_login_form": true, 
-    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb", 
-    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html"
+    "show_login_form": true,
+    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
+    "ldap_host": "172.16.148.135",
+    "ldap_port": "389",
+    "ldap_base": "dc=versioneye, dc=com",
+    "ldap_filter": "(cn=LOGIN)",
+    "ldap_email": "mail",
+    "ldap_username": "uid",
+    "ldap_active": "false"
   },
   "enterprise": {
     "ga_account": "",
@@ -262,8 +283,15 @@
     "default_project_period": "daily",
     "default_project_public": true,
     "show_signup_form": true,
-    "show_login_form": true, 
-    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb", 
-    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html"
+    "show_login_form": true,
+    "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
+    "ldap_host": "172.16.148.135",
+    "ldap_port": "389",
+    "ldap_base": "dc=versioneye, dc=com",
+    "ldap_filter": "(cn=LOGIN)",
+    "ldap_email": "mail",
+    "ldap_username": "uid",
+    "ldap_active": "false"
   }
 }
