--- a/config/settings.json
+++ b/config/settings.json
@@ -65,6 +65,7 @@
     "show_signup_form": true,
     "show_login_form": true,
     "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_multi_content": "app/views/lwl_pdf/lwl_pdf_multi.html.erb",
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
@@ -144,6 +145,7 @@
     "show_signup_form": true,
     "show_login_form": true,
     "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_multi_content": "app/views/lwl_pdf/lwl_pdf_multi.html.erb",
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
@@ -221,6 +223,7 @@
     "show_signup_form": true,
     "show_login_form": true,
     "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_multi_content": "app/views/lwl_pdf/lwl_pdf_multi.html.erb",
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
@@ -294,6 +297,7 @@
     "show_signup_form": true,
     "show_login_form": true,
     "lwl_pdf_content": "app/views/lwl_pdf/lwl_pdf.html.erb",
+    "lwl_pdf_multi_content": "app/views/lwl_pdf/lwl_pdf_multi.html.erb",
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
