--- a/circle.yml
+++ b/circle.yml
@@ -19,5 +19,4 @@ database:
 
 test:
   override:
-    - docker build -t versioneye/rails_app:4.6.0 .
-    - docker run --env RAILS_ENV=test --link mongodb:db --link elasticsearch:es --link memcached:mc --link rabbitmq:rm versioneye/rails_app:4.6.0 rspec
+    - rspec
