Set test env explicitly!

--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ database:
 
 test:
   override:
+    - export RAILS_ENV=test
     - mkdir ~/versioneye/log
     - cp veye_deploy_rsa ~/.ssh/id_circleci_github
     - gem install bundler
