--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ app/assets/images/.DS_Store
 webrate.log
 versioneye.sublime-project
 versioneye.sublime-workspace
+
+notes.txt
+
+hybris_notes.txt
+
+hybris_agenda.txt
