Add option that only admins can create orgas.

--- a/config/settings.json
+++ b/config/settings.json
@@ -32,6 +32,7 @@
     "projects_unique_ga": false,
     "projects_unique_gav": false,
     "projects_unique_scm": false,
+    "orga_creation_admin_only": false,
     "memcache_password": "env_MEMCACHE_PASSWORD",
     "memcache_username": "env_MEMCACHE_USERNAME",
     "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
@@ -115,6 +116,7 @@
     "projects_unique_ga": false,
     "projects_unique_gav": false,
     "projects_unique_scm": false,
+    "orga_creation_admin_only": false,
     "memcache_username": "env_MEMCACHE_USERNAME",
     "memcache_password": "env_MEMCACHE_PASSWORD",
     "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
@@ -196,6 +198,7 @@
     "projects_unique_ga": false,
     "projects_unique_gav": false,
     "projects_unique_scm": false,
+    "orga_creation_admin_only": false,
     "memcache_username": "env_MEMCACHE_USERNAME",
     "memcache_password": "env_MEMCACHE_PASSWORD",
     "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
@@ -251,6 +254,7 @@
     "projects_unique_ga": false,
     "projects_unique_gav": false,
     "projects_unique_scm": false,
+    "orga_creation_admin_only": false,
     "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
     "mvn_repo_1_type": "artifactory",
     "mvn_repo_1_user": "admin",
