Update settings for Artifactory

--- a/config/settings.json
+++ b/config/settings.json
@@ -6,6 +6,10 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "mvn_art_ignore_remote_repos": true,
+    "mvn_art_ignore_local_repos": false,
+    "mvn_art_ignore_virtual_repos": false,
+    "mvn_art_ignore_keys": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -89,6 +93,10 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "mvn_art_ignore_remote_repos": true,
+    "mvn_art_ignore_local_repos": false,
+    "mvn_art_ignore_virtual_repos": false,
+    "mvn_art_ignore_keys": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -173,6 +181,10 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "mvn_art_ignore_remote_repos": true,
+    "mvn_art_ignore_local_repos": false,
+    "mvn_art_ignore_virtual_repos": false,
+    "mvn_art_ignore_keys": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -260,6 +272,10 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "mvn_art_ignore_remote_repos": true,
+    "mvn_art_ignore_local_repos": false,
+    "mvn_art_ignore_virtual_repos": false,
+    "mvn_art_ignore_keys": "",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
