Update Core & Add Version Exporter

--- a/config/settings.json
+++ b/config/settings.json
@@ -75,6 +75,8 @@
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "sec_pdf_content": "app/views/sec_pdf/sec_pdf.html.erb",
     "sec_pdf_footer": "app/views/sec_pdf/footer.html",
+    "ver_pdf_content": "app/views/version_pdf/version_pdf.html.erb",
+    "ver_pdf_footer":  "app/views/version_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
     "ldap_base": "dc=versioneye, dc=com",
@@ -163,6 +165,8 @@
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "sec_pdf_content": "app/views/sec_pdf/sec_pdf.html.erb",
     "sec_pdf_footer": "app/views/sec_pdf/footer.html",
+    "ver_pdf_content": "app/views/version_pdf/version_pdf.html.erb",
+    "ver_pdf_footer":  "app/views/version_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
     "ldap_base": "dc=versioneye, dc=com",
@@ -249,6 +253,8 @@
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "sec_pdf_content": "app/views/sec_pdf/sec_pdf.html.erb",
     "sec_pdf_footer": "app/views/sec_pdf/footer.html",
+    "ver_pdf_content": "app/views/version_pdf/version_pdf.html.erb",
+    "ver_pdf_footer":  "app/views/version_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
     "ldap_base": "dc=versioneye, dc=com",
@@ -331,6 +337,8 @@
     "lwl_pdf_footer": "app/views/lwl_pdf/footer.html",
     "sec_pdf_content": "app/views/sec_pdf/sec_pdf.html.erb",
     "sec_pdf_footer": "app/views/sec_pdf/footer.html",
+    "ver_pdf_content": "app/views/version_pdf/version_pdf.html.erb",
+    "ver_pdf_footer":  "app/views/version_pdf/footer.html",
     "ldap_host": "172.16.148.135",
     "ldap_port": "389",
     "ldap_base": "dc=versioneye, dc=com",
