Add single repo option for Artifactory.

--- a/config/settings.json
+++ b/config/settings.json
@@ -10,6 +10,7 @@
     "mvn_art_ignore_local_repos": false,
     "mvn_art_ignore_virtual_repos": false,
     "mvn_art_ignore_keys": "",
+    "mvn_art_single_repo": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -99,6 +100,7 @@
     "mvn_art_ignore_local_repos": false,
     "mvn_art_ignore_virtual_repos": false,
     "mvn_art_ignore_keys": "",
+    "mvn_art_single_repo": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -189,6 +191,7 @@
     "mvn_art_ignore_local_repos": false,
     "mvn_art_ignore_virtual_repos": false,
     "mvn_art_ignore_keys": "",
+    "mvn_art_single_repo": "",
     "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
@@ -282,6 +285,7 @@
     "mvn_art_ignore_local_repos": false,
     "mvn_art_ignore_virtual_repos": false,
     "mvn_art_ignore_keys": "",
+    "mvn_art_single_repo": "",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
