--- a/config/settings.json
+++ b/config/settings.json
@@ -48,6 +48,7 @@
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
+    "timezone": "London",
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
     "stripe_legacy_public_key": "env_STRIPE_LEGACY_PUBLIC_KEY",
@@ -139,6 +140,7 @@
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
+    "timezone": "London",
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
     "stripe_legacy_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
@@ -228,6 +230,7 @@
     "server_url": "https://www.versioneye.com",
     "server_host": "www.versioneye.com",
     "server_port": 80,
+    "timezone": "London",
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
     "stripe_legacy_public_key": "env_STRIPE_LEGACY_PUBLIC_KEY",
@@ -289,6 +292,7 @@
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
+    "timezone": "London",
     "smtp_address": "env_SMTP_ADDRESS",
     "smtp_port": "env_SMTP_PORT",
     "smtp_username": "env_SMTP_USER",
